Updated ??/??/2007 - Version 1.98



Updated 01/30/2007 - Version 1.97

  Export Gems fixes: don't die looking for made gems, set the crafted
  gems to marked (but not checked), update the next quickbar slot
  after exporting, and disable the export button when there is no
  crafter or no gems chosen to export.  This makes it easier to see
  when gems are successfully exported.

  Changed the description from "Hide 'done' gems" to "Hide 'made' gems".

  Item renaming now works properly again (signal name broken in 1.96).

Updated 1/25/2007 - Version 1.96 - Patch 1.87 SC Overhaul

  Removed Quality factor entirely from gems.

  Removed Crafting Time tracking from gems.

  Change the concept of tracking 'remakes' to tracking 'makes',
  where zero makes is costed as if it will be one make, and one 
  or more makes are the actual number of gems that were imbued
  (replaced one-by-one as the crafter goes Kaboom.)

  Removed 'expected multiplier' because the SC'er doesn't know
  exactly when they will go Kaboom, and will replace only one
  gem if they plan ahead.  Imbued three with no overcharge, and
  hold off the overcharge gem so only one gem explodes if any

  Hide acuity-type stats that don't apply to the class if the stat
  has no bonus and display "ACU" for classes with no acuity stat
  when there is a useless bonus.

  Track makes on the main item info pane (where Quality used to be).

  Save the last View -> Toolbar preference and the toolbar's current 
  location (top/bottom/left/right) from session to session.  Fixed
  the Config Report button to bring up the correct report.

  Fix export gems so all Spellcrafting toons show up. It had choked
  on antique -###.ini toons when ### was an unknown server number.

  Total all remade gem costs by item and in grand total, this was 
  broken in 1.93.

  Patched Qt so that opening the ItemList with broken network drives
  or floppy drives doesn't timeout for > 10s.
